    and include the time of the event in its tooltip.
  - Added default settings for Mercury/32 to conf.pl.
  - Fix to prevent mailboxes are deleted in selected stage which is against
    RFC3501.
  - Fix reply all address string in case the personal name contained a comma 
    (address separator).
  - Added SASL PLAIN to IMAP and SMTP. Thanks to avel for the prodding and
    code snippet.

**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.0 -- 3 April 2003
-----------------------------
  - Fixed mail_fetch plugin. Now folder edition defaults to actual value.
    All settings from other servers are preserved when deleting one.
  - Added Vietnamese translation.
  - Fixed the newmail plugin.
  - Added RECENT response to sqimap_get_status.
  - Fixed attachment filename resolving.
  - Added check for X-Confirm-Reading-To to make MDN work for messages sent by Pine.
  - sqextractGlobalVar removed (use sqgetGlobalVar instead).
  - Subfolders of Sent and Drafts show To field instead of From
  - Updates in conf.pl to infamous delete_folder setting, including
    addition of appropriate default value for courier and UW.
  - Fix for date/time display in certain timezones.
  - Fix some features of login.php that are used by some plugins and was broken
    by register_globals = off.
  - Added Greek locale. Thanks to George P. Kremmydas 
    <george at kefalonia-ithaki.gr> and Alexandros Vellis <avel at noc.uoa.gr>
  - Added notes about PHP 4.3.x to documentation.
  - Fixed \Noselect mailbox detection.
  - Fixed charset decode of base64 encoded strings.
  - Fixed encoding of email addresses in our composed messages.
  - Fixed folder creation for Courier using Autoconfig options.
  - Fixed encoded string handling inside MDN notifications.
  - Fixed unfold header routine in imap_messages (for mailbox_display).
  - Fixed subject_line hook.
  - Fixed sqgetGlobalVar switching.